start/build/.happy/s-1011664294
SyntaxError: Unexpected token (276:2)

[0m [90m 274 | [39m[90m}[39m
 [90m 275 | [39m
[31m[1m>[22m[39m[90m 276 | [39m[90m*/[39m[33m*[39m[33m/[39m
 [90m     | [39m  [31m[1m^[22m[39m[0m

BabelLoaderError: SyntaxError: Unexpected token (276:2)

[0m [90m 274 | [39m[90m}[39m
 [90m 275 | [39m
[31m[1m>[22m[39m[90m 276 | [39m[90m*/[39m[33m*[39m[33m/[39m
 [90m     | [39m  [31m[1m^[22m[39m[0m

    at transpile (/Users/pengxiaolong/Project/Tys/24Points/node_modules/babel-loader/lib/index.js:61:13)
    at Object.module.exports (/Users/pengxiaolong/Project/Tys/24Points/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/HappyWorker.js:32:3)